src/test/deca/context/invalid/SO/declareVoid.deca
// Description:
//    Initialisation avec rvalue de type différent de la lvalue
//
// Resultats:
//    ligne 12 : Erreur, initialisation incorrecte (types)
//
// Historique:
//    cree le 01/01/2022

{
    void x;
}